[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/consola.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/DDKG2_logo.png" type="Texture" id=2]
[ext_resource path="res://scenes/main_menu.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="background" type="ColorRect" parent="."]
margin_left = -21.8633
margin_top = -16.8179
margin_right = 1040.14
margin_bottom = 618.182
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo" type="AnimatedSprite" parent="."]
position = Vector2( 671.232, 202.043 )
frames = SubResource( 1 )

[node name="new_game" type="Button" parent="."]
margin_left = 30.5508
margin_top = 361.469
margin_right = 412.551
margin_bottom = 406.469
custom_fonts/font = SubResource( 2 )
text = "Новая игра (Дело 2)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load_game" type="Button" parent="."]
margin_left = 30.5508
margin_top = 434.429
margin_right = 412.551
margin_bottom = 479.429
custom_fonts/font = SubResource( 2 )
text = "Продолжить"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save_info" type="Label" parent="."]
margin_left = 27.4492
margin_top = 493.883
margin_right = 423.449
margin_bottom = 510.883
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Файла сохранения нет
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="copyright" type="Label" parent="."]
margin_left = 611.13
margin_top = 571.333
margin_right = 1007.13
margin_bottom = 588.333
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Билд 1. (C) AZIE Games 2021"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="load_game" to="." method="_on_load_game_pressed"]
